Fix: ItemService 권한 관련 예외 처리 수정